
@startuml
title Topic Model's status

state Normal{
  Published   : 公開中
  Unpublished : 未公開
  Archived   : 過去ログ化
}

' state Abnormal{
  Removed : User/Owner/Admin deleted board.
  Removed : A reason is stored in other column.
' }

[*]      -down-> Unpublished : [U/G]トピックの作成
[*]      -down-> Published   : [U/G]トピックの作成
Published   -left-> Unpublished : [O]
Unpublished -right-> Published : [O]
Published   --> Archived : [S]

Normal --> Removed : [A/O]

legend
- S : System
- A : Server Admin
- O : Owner
- U : User
- G : Guest
end legend

@enduml